--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <script src="js/main.js"></script>
-        <scripy src="js/app.js"></script>
+        <script src = "js/main.js"></script>
+        <script src = "js/app.js"></script>
         <script src = "js/num.js"></script>
         <script src = "js/obj.js"></script>
         <script src = "js/sp.js"></script>
