--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
         <meta charset="utf-8">
         <meta name="description" content="$1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title</title>
+        <title>My Project</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <script src="js/main.js"></script>
-        <scripy src="js/app.js"></script>
-        <script src = "js/num.js"></script>
-        <script src = "js/obj.js"></script>
-        <script src = "js/sp.js"></script>
+        <div id="first">
+            <p>Oops!</p>
+        </div>
+        <div>
+            <p>Yooo!</p>
+        </div>
+        <script src="js/app.js"></script>
+        <script src="js/myproject.js"></script>
+        <script src="js/lesson5.js"></script>
     </body>
 </html>
